--- a/HoursOfWork/MainWindow.xaml
+++ b/HoursOfWork/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HoursOfWork"
         mc:Ignorable="d"
-        Title="MainWindow" Height="768" Width="1024" MinHeight="768" MinWidth="1024">
+        Title="HoursOfWork" Height="768" Width="1024" MinHeight="768" MinWidth="1024">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -39,9 +39,9 @@
         <GroupBox Header="Zusammenfassung:" Grid.Column="1" Grid.Row="1">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -77,20 +77,83 @@
                         <RadioButton x:Name="rbAll" GroupName="TimeInterval" Content="gesamt" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     </Grid>
                 </GroupBox>
-                
-                
+                <GroupBox Header="Ergebnisse:" Grid.Column="0" Grid.Row="1" >
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label Content="Soll:" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"/>
+                        <TextBox x:Name="txtResultsTargetHour" IsReadOnly="True" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Right"/>
+                        <Label Content="h" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left"/>
+                        <Label Content="Ist:" Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right"/>
+                        <TextBox x:Name="txtResultsCurrentHour" IsReadOnly="True" Grid.Column="5" Grid.Row="0" HorizontalContentAlignment="Right"/>
+                        <Label Content="h" Grid.Column="6" Grid.Row="0" HorizontalAlignment="Left"/>
+                        <Button x:Name="btnResultsRefresh" Content="aktualisieren" Grid.Column="8" Grid.Row="0"/>
+
+                        <Label Content="Differenz:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right"/>
+                        <TextBox x:Name="txtResultsDifferenceHour" IsReadOnly="True" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Right"/>
+                        <Label Content="h" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left"/>
+                    </Grid>
+                </GroupBox> 
             </Grid>    
         </GroupBox>
         <GroupBox Header="Export:" Grid.Column="1" Grid.Row="2">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
+
+                <GroupBox Header="Parameter:" Grid.Column="0" Grid.Row="0" >
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="25"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Kalenderwoche:" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" />
+                        <TextBox x:Name="txtExportCalenderWeek" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Right"/>
+                        <Button x:Name="btnExportCreateText" Content="Text erstellen" Grid.Column="3" Grid.Row="0"/>
+                        <Button x:Name="btnExportEmailText" Content="Email verschicken" Grid.Column="5" Grid.Row="0"/>
+                    </Grid>
+                </GroupBox>
+                
+                <GroupBox Header="Ausgabe:" Grid.Column="0" Grid.Row="1" >
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <RichTextBox x:Name="rtbOutput" Margin="5" IsReadOnly="True" Background="LightGray" FontSize="12"/>
+                    </Grid>
+                </GroupBox>
             </Grid>
         </GroupBox>
     </Grid>
